Stop testing with JDK 22